Update .gitignore to exclude sensitive and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,15 @@
 
 # Змінні середовища - містять конфіденційні дані (токен бота)
 .env
+token.txt # Якщо цей файл також використовується для зберігання токена
 
 # Згенеровані файли даних
 results.xlsx
-*.png # Всі PNG файли, оскільки `layered_semi_circular_progress.png` генерується
-# Якщо у вас є інші PNG, які повинні бути в репозиторії (наприклад, для візуальних ресурсів),
-# то краще явно ігнорувати лише згенеровані, наприклад:
-# layered_semi_circular_progress.png
+layered_semi_circular_progress.png # Ігноруємо конкретний згенерований PNG
+# Якщо у вас є інші PNG, які є статичними ресурсами і ви хочете їх включити в репозиторій,
+# не використовуйте *.png. Додайте кожен згенерований PNG окремо.
 
-# Файли з даними, які можуть змінюватися і не є частиною коду
-# Враховуючи, що це дані "до" і "після", їх зазвичай не комітять.
-# Якщо ви все ж хочете їх версіонувати, видаліть ці рядки.
-#pass4.xlsx
-#required.xlsx
-#start_kvk.xlsx
+# Файли з даними, які можуть змінюватися і не є частиною коду (якщо ви не хочете їх версіонувати)
 
 # Папки для віртуальних середовищ Python
 venv/
